--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -29,7 +29,7 @@ We call $\phi$ a \emph{redex} and $\psi$ a \emph{contractum} of $\mathrel R$.
 
 %-----------------------------------------------
 \begin{remark}\label{remark:LabelBijectionEdges}
-Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, we indicate the bijections $f$ and $g$ by labeling the upper (resp., lower) edge $f(\epsilon)$ (resp., $g(\epsilon)$) of $\psi$ by $\epsilon$, for every upper (resp., lower) edge $\epsilon$ of $\phi$.
+Given a reduction $R$ and two flows $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, we indicate the bijections $f$ and $g$ by labeling the upper (resp., lower) edge $f(\epsilon)$ (resp., $g(\epsilon)$) of $\psi$ by $\epsilon$, for every upper (resp., lower) edge $\epsilon$ of $\phi$.
 \end{remark}
 %-----------
 
@@ -37,7 +37,7 @@ Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\ma
 
 %--------------------------------------------------
 \begin{definition}\label{definition:SoundRedcution}
-A reduction $\mathrel{R}$ is \emph{sound}\index{reduction!sound} if, for every $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, and for every derivation $\Phi$ with atomic flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
+A reduction $\mathrel{R}$ is \emph{sound}\index{reduction!sound} if, for every $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, and for every derivation $\Phi$ with flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
 \end{definition}
 %---------------
 
