--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -22,13 +22,13 @@ In this section I generalise those results in the following two ways:
 %---------------------------------------
 \end{enumerate}
 
-As Atserias, Galesi and Pudl\'ak argue, there is no apparent reason for this normalisation problem not to be polynomial. The difficulty in obtaining polynomiality resides in finding a suitable class of derivations as described in Remark~\ref{remark:FromGammasToThresholds}.
+As Atserias, Galesi and Pudl\'ak argue, there is no apparent reason for this normalisation problem not to be polynomial. The difficulty in obtaining polynomiality resides in finding a suitable class of derivations as described in Remark~\vref{remark:FromGammasToThresholds}.
 
 We present here the main construction of this section, \emph{i.e.}, a class of derivations $\Gammasf$ that adhere to the condition of Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}. The complexity of the $\Gammasf$ derivations dominates the complexity of the streamlined proof, and is due to the complexity of certain threshold formulae, on which the $\Gammasf$ derivations are based. The $\Gammasf$ derivations are constructed in Definition~\vref{definition:ThresholdDerivations}; this directly leads to Theorem~\vref{theorem:ThresholdDerivations}, which states a crucial property of the $\Gammasf$ derivations and which is the main result of this section.
 
 Threshold formulae realise boolean threshold functions, which are defined as boolean functions that are true if and only if at least $k$ of $n$ inputs are true (see \cite{Wege:87:The-Comp:vn} for a thorough reference on threshold functions).
 
-There are several ways of encoding threshold functions into formulae, and the problem is to find, among them, an encoding that allows us to obtain Theorem~\vref{theorem:ThresholdDerivations}. Efficiently obtaining the property stated in Theorem~\vref{theorem:ThresholdDerivations} crucially depends also on the proof system we adopt.
+There are several ways of encoding threshold functions into formulae, and the problem is to find, among them, an encoding that allows us to obtain Theorem~\vref{theorem:ThresholdDerivations}. Efficiently obtaining the property stated in Theorem~\ref{theorem:ThresholdDerivations} crucially depends also on the proof system we adopt.
 
 In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $n\le x$.
 
@@ -830,7 +830,7 @@ For every $n>0$, $\to_{\frqmis_n}$ is sound; moreover, if\/ $\Phi\to_{\frqmis_n}
 \end{theorem}
 
 \begin{proof}
-The result follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}, Definition~\vref{definition:ThresholdFormulae} and Theorem~\ref{theorem:ThresholdDerivations}.
+The result follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}, Definition~\vref{definition:ThresholdFormulae} and Theorem~\vref{theorem:ThresholdDerivations}.
 \end{proof}
 %----------
 
