--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -3,7 +3,7 @@
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
-We now define the mapping from derivations to atomic flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atom occurrences between rule instances. We first state a fact, whose proof is immediate.
+We now define the mapping from derivations to flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atom occurrences between rule instances. We first state a fact, whose proof is immediate.
 
 \Tom{Rehprased slightly and removed ``unique''.}
 
@@ -11,7 +11,7 @@ We now define the mapping from derivations to atomic flows. As we said, the idea
 
 %------------------------------------------------
 \begin{proposition}\label{proposition:FlowUnique}
-Given a derivation\/ $\Phi$ in the system $\SKS$, there is an atomic flow $\phi$ such that:
+Given a derivation\/ $\Phi$ in the system $\SKS$, there is a flow $\phi$ such that:
 \begin{enumerate}
 %
 \item there is a surjective map between the set of atom occurrences of\/ $\Phi$ and the set of edges of $\phi$;
@@ -74,17 +74,15 @@ all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the prem
 
 \TODO{Macro for ``mapped from occurences of''.}
 
-\TODO{Carefully check ``atom'' v.\ ``atom occurence''.}
-
 %---------------------------------------
 \begin{definition}\label{definition:AssociatedFlow}
-Given a derivation $\Phi$, we say that the atomic flow $\phi$ constructed in the proof of  Proposition~\vref{proposition:FlowUnique} is the atomic flow \emph{associated with}\index{flow!associated with derivation} the derivation $\Phi$. Sometimes, when an atom occurrence $a$ in $\Phi$ is mapped to an edge $\epsilon$ in $\phi$, we decorate $a$ with the label $\epsilon$ or the label $\phi$.
+Given a derivation $\Phi$, we say that the flow $\phi$ constructed in the proof of  Proposition~\vref{proposition:FlowUnique} is the (\emph{atomic}) \emph{flow associated with}\index{flow!associated with derivation} the derivation $\Phi$. Sometimes, when an atom occurrence $a$ in $\Phi$ is mapped to an edge $\epsilon$ in $\phi$, we decorate $a$ with the label $\epsilon$ or the label $\phi$.
 \end{definition}
 %---------------
 
 %--------------
 \begin{example}
-Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and their associated atomic flows, where colors are used to indicate the mapping from atom occurrences to edges.
+Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and their associated flows, where colors are used to indicate the mapping from atom occurrences to edges.
 \end{example}
 %------------
 
@@ -218,20 +216,20 @@ Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and th
 \vcenter{\hbox{\includegraphics{Figures/flowExtract3}}}
 \end{array}
 \]
-\caption{Examples of derivations in the calculus of structures (top row), their translation into the functorial calculus (middle row), and the atomic flows associated with the latter (bottom row).}
+\caption{Examples of derivations in the calculus of structures (top row), their translation into the functorial calculus (middle row), and the flows associated with the latter (bottom row).}
 \label{figure:ExampleAtomicFlows}
 \end{figure}
 %-----------
 
 %--------------------------------------------------
 \begin{definition}\label{definiton:FlowRestriction}
-Given a derivation $\Phi$ with atomic flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\phi_a$ of $\phi$, such that every edge of $\phi_a$ is mapped to from $a$ or $\bar a$.
+Given a derivation $\Phi$ with flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\phi_a$ of $\phi$, such that every edge of $\phi_a$ is mapped to from $a$ or $\bar a$.
 \end{definition}
 %---------------
 
 %--------------
 \begin{example}
-Consider the rightmost derivation and its associated atomic flow in Figure~\ref{figure:ExampleAtomicFlows}. The restriction of this flow to $a$ is:
+Consider the rightmost derivation and its associated flow in Figure~\vref{figure:ExampleAtomicFlows}. The restriction of this flow to $a$ is:
 \[
 \vcenter{\hbox{\includegraphics{Figures/flowExtract4}}}
 \]
@@ -247,16 +245,16 @@ Every atomic flow is associated with some derivation.
 
 \begin{proof}
 First, we show that, for any atom $a$ and formula contexts $\xi\vlhole$ and $\zeta\vlhole$, there exists a derivation
-$
+\[
 \vlder{}{\{\swi,\med\}}
 {
  \vls[(\xi\{\{a\}.\zeta\{\fff\}).\ttt]
 }
 {
  \vls[(\xi\{\{\ttt\}.\zeta\{a\}).\ttt]
-}
-$
-, in other words we can `move' the atom $a$ from the context $\xi\vlhole$ to the context $\zeta\vlhole$ by using a derivation whose atomic flow contains no vertices:
+}\quad,
+\]
+in other words we can `move' the atom $a$ from the context $\xi\vlhole$ to the context $\zeta\vlhole$ by using a derivation whose flow contains no vertices:
 \[
 \vlderivation
 {
@@ -310,7 +308,7 @@ This construction can be used repeatedly to build the derivation $\Psi$, for $h\
 \vlhy{\vls[(\xi\{\ttt\}\cdots\{\ttt\}.\zeta\{a_1 \}\cdots\{a_h \}).\ttt]}}}
 \quad.
 \]
-We can now prove the theorem by induction on the number of vertices of a given atomic flow $\phi$. The cases where $\phi$ only has zero or one vertex are trivial. Let us then suppose that $\phi$ has more than one vertex; then $\phi$ can be considered as composed of two flows $\phi_1$ and $\phi_2$, each with fewer vertices than $\phi$, as follows:
+We can now prove the theorem by induction on the number of vertices of a given flow $\phi$. The cases where $\phi$ only has zero or one vertex are trivial. Let us then suppose that $\phi$ has more than one vertex; then $\phi$ can be considered as composed of two flows $\phi_1$ and $\phi_2$, each with fewer vertices than $\phi$, as follows:
 \[
 \vcenter{\hbox{\includegraphics{Figures/surjectFlow}}}\quad,
 \]
@@ -396,7 +394,7 @@ Given a derivation\/ $\vlder\Phi\SKS{\beta}\alpha$, let its associated flow have
 \[
 \vcenter{\hbox{\includegraphics{Figures/propSubst1}}}\quad,
 \]
-such that $\phi$ is a connected component whose edges are each associated with atom $a$; then, for any formula $\gamma$, there exists a derivation
+such that $\phi$ is a connected component whose edges are each associated with occurences of the atom $a$; then, for any formula $\gamma$, there exists a derivation
 \[
 \vlder\Psi\SKS{\beta \{a^\phi/\gamma\}}
               {\alpha\{a^\phi/\gamma\}}
