--- a/formalism.tex
+++ b/formalism.tex
@@ -8,7 +8,7 @@ The idea of a new formalism, named \emph{formalism A} based on the calculus of s
 
 \TODO{Never use the term ``bureaucracy free'' or ``lack of bureaucracy''. Instead use ``bureaucracy reduced'' or ``reduced bureaucracy''. Moreover, the main benefit is the plasticity, not the bureaucracy.}
 
-In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsection:ThresholdFormulae}).
+In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\vref{subsection:ThresholdFormulae}).
 
 After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
 
@@ -392,7 +392,7 @@ Given derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma
 %=======================================================================
 \section{The Calculus of Structures}\label{section:CalculusOfStructures}
 
-We now present the calculus of structures and in Theorems~\ref{theorem:CoSToFunc} and \ref{theorem:FuncToCoS} we show that the functorial calculus and the calculus of structures polynomially simulate each other.
+We now present the calculus of structures and in Theorem~\vref{theorem:CoSToFunc} and Theorem~\vref{theorem:FuncToCoS} we show that the functorial calculus and the calculus of structures polynomially simulate each other.
 
 The intuition behind derivations in the calculus of structures is that we rewrite formulae by applying inference rules inside a context.
 
@@ -514,7 +514,7 @@ We first show how to construct $\Psi$: The base cases, when $\Phi$ is a formula 
  \vlder{\Phi_2}{}{\beta_2}{\alpha_2}
 )\quad.
 \]
-By the inductive hypothesis and Lemma~\ref{lemma:CoSDerInContext} there are calculus of structures derivations
+By the inductive hypothesis and Lemma~\vref{lemma:CoSDerInContext} there are calculus of structures derivations
 \[
 \vlder{\Psi_1}{}{\vls(\beta_1.\alpha_1)}{\vls(\alpha_1.\alpha_1)}
 \qquad\mbox{and}\qquad
